src/objects/Batch__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Balance__c</fullName>
        <formula>Students_Fee__c  -  Students_Fee_paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Batch_Contact_Person__c</fullName>
        <label>Batch Contact Person</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Contact_Phone__c</fullName>
        <label>Batch Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Mail_ID__c</fullName>
        <label>Group Mail ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lab_Timings__c</fullName>
        <label>Lab Timings</label>
        <picklist>
            <picklistValues>
                <fullName>7-8AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-9AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-10AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-11AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-12AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-1PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-5PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-6PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-7PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-8PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-9PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Paid_Studen__c</fullName>
        <label>Max Paid Studen</label>
        <summarizedField>Students__c.Fee_paid__c</summarizedField>
        <summaryForeignKey>Students__c.Batch__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Students_Allowed__c</fullName>
        <label>Max Students Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Students__c</fullName>
        <label>No of Students</label>
        <summaryForeignKey>Students__c.Batch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <picklist>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Students_Fee__c</fullName>
        <label>Students Fee</label>
        <summarizedField>Students__c.Fee__c</summarizedField>
        <summaryForeignKey>Students__c.Batch__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Students_Fee_paid__c</fullName>
        <label>Students Fee paid</label>
        <summarizedField>Students__c.Fee_paid__c</summarizedField>
        <summaryForeignKey>Students__c.Batch__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Timings__c</fullName>
        <label>Timings</label>
        <picklist>
            <controllingField>Session__c</controllingField>
            <picklistValues>
                <fullName>7-8AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-9AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-10AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-1PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-7PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-8PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-9PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Batch</relationshipLabel>
        <relationshipName>Batch</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_of_Batch__c</fullName>
        <label>Type of Batch</label>
        <picklist>
            <picklistValues>
                <fullName>fast track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>regular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Batch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>